--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@aws-amplify/ui-vue": "^0.2.14",
     "aws-amplify": "^3.0.24",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "stylus-loader": "^3.0.2",
+    "vue": "^2.6.11",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
